2006-04-12  Mikael Hallendal  <micke@imendio.com>

	* autogen.sh:
	* configure.ac:
	* configure.in:
	- Bumped the autoconf and automake requirements.
	- Added support to compile with --with-ssl=gnutls|openssl|no. The
	  default is to build against gnutls and you must explicitely tell that
	  you don't want SSL support or configure will fail if you don't have
	  GnuTLS (or building with --with-ssl=openssl).
	* loudmouth/Makefile.am:
	* loudmouth/lm-ssl-openssl.c:
	- Added an OpenSSL backend. Currently doesn't verify certificates.

2006-04-05  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Define HAVE_SSL which will be set if GnuTLS or OpenSSL
	  is supported.
	* loudmouth/Makefile.am:
	* loudmouth/lm-connection.c:
	* loudmouth/lm-internals.h:
	* loudmouth/lm-ssl-base.[ch]:
	* loudmouth/lm-ssl-generic.c:
	* loudmouth/lm-ssl-gnutls.c:
	* loudmouth/lm-ssl-internals.h: Took out the SSL functions from
	  lm-internals.h
	* loudmouth/lm-ssl.[ch]:
	- Refactored the SSL stuff to make room for an OpenSSL implementation.
	- lm-ssl-generic and lm-ssl-base contains the shared parts between the
	  GnuTLS and the OpenSSL implementations. lm-ssl-gnutls.c will contain
	  GnuTLS specifics and lm-ssl-openssl.c will contain OpenSSL.

2006-04-05  Mikael Hallendal  <micke@imendio.com>

	* Speed release of 1.0.3
	* NEWS: Updated
	* configure.in: Bumped to 1.0.3
	* loudmouth/lm-ssl.c: (ssl_free), (ssl_func_always_continue):
	- Build fix for building without SSL, thanks foser, LM-25.

2006-04-05  Mikael Hallendal  <micke@imendio.com>

	* Release 1.0.2
	* NEWS: Updated for 1.0.2
	* configure.in: Bumped version to 1.0.2

2006-04-03  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free),
	(_lm_connection_succeeded), (connection_buffered_write_cb),
	(connection_output_is_buffered), (connection_setup_output_buffer),
	(connection_do_close), (connection_do_write), (connection_send),
	(lm_connection_new), (lm_connection_authenticate):