@@ -1,3 +1,8 @@
+2006-04-18  Mikael Hallendal  <micke@imendio.com>
+
+	* loudmouth/lm-ssl-openssl.c: (_lm_ssl_begin):
+	- Fixed an issue reported by Martyn when using non-blocking sockets.
+
 2006-04-12  Mikael Hallendal  <micke@imendio.com>
 
 	* autogen.sh:
